src/styles/styles.css
:root {
  --header-color: #23486a;
  --subheader-color: #4c7b8b;
  --card-color: #d1d1e9;
  --secondary-color: #a6b1e1;
  --black: #1f1235;
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  background-color: #f4f4f9;
  overflow-x: hidden;
}

h1,
h3 {
  margin: 0;
}

.hero {
  background-color: #fffbfc;
  padding: 2.5rem 3rem;
  box-shadow: 0.2rem 0rem 0.2rem #7d869c;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hero-logo-container {
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

.hero-icon {
  width: 3.5rem;
  height: auto;
}

.hero-logo-main,
.hero-logo-sub {
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
}

.hero-logo-main {
  color: var(--header-color);
}

.hero-logo-sub {
  font-size: 1rem;
  color: var(--subheader-color);
}

.download-cv-btn {
  background-color: transparent;
  border-radius: 2rem;
  padding: 1.2rem 1.8rem;
  border: 0.15rem solid var(--header-color);
  color: var(--header-color);
  font-family: "Montserrat", sans-serif;
  font-size: 0.8rem;
  cursor: pointer;
  transition: background-color 0.2s ease, color 0.2s ease-in;
}

.download-cv-btn:hover {
  background-color: var(--header-color);
  color: #fffbfc;
}

#content {
  display: flex;
  justify-content: space-between;
}

.form-section,
.cv-section {
  padding: 2rem;
}

.form-section {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  font-family: "Zen Maru Gothic", sans-serif;
  font-weight: bold;
  color: black;
  max-width: 60rem;
}

.form-section button {
  color: inherit;
}

.general-form {
  justify-content: center;
  align-items: center;
  font-size: 1.1rem;
}

.general-form-container {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  align-items: center;
}

.form-about-education-row {
  display: flex;
  gap: 2rem;
  align-items: start;
}

.individual-input-container {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.general-form-input,
.about-form-input,
.education-form-input,
.experience-form-input,
.project-form-input,
.skills-form-input {
  padding: 0.5rem;
  appearance: none;
  border-radius: 0.4rem;
  width: 16rem;
  border: 0.15rem solid #dcd6f7;
  outline: none;
  background-color: #f4f4f9;
}

.about-form-container,
.education-form-container,
.experience-form-container,
.project-form-container,
.skills-form-container,
.general-form {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  background-color: var(--card-color);
  padding: 1.5rem;
  border-radius: 0.5rem;
}

.project-form-super-container,
.project-overview-super-container,
.experience-form-super-container,
.experience-overview-super-container {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.experience-overview-super-container,
.project-overview-super-container {
  gap: 0;
}

.about-form-header,
.education-form-header,
.experience-form-header,
.project-form-header,
.skills-form-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.submit-btn,
.add-experience-btn,
.delete-btn,
.add-project-btn,
.add-skill-btn {
  background-color: var(--secondary-color);
  border-radius: 0.5rem;
  padding: 0.9rem 1.6rem;
  border: none;
  cursor: pointer;
  font-size: 0.95rem;
  will-change: transform;
  transition: transform 0.2s ease;
}

.submit-btn:active,
.add-experience-btn:active,
.experience-edit-btn:active,
.delete-btn:active,
.add-project-btn:active,
.add-skill-btn:active {
  transform: scale(0.9);
}

.about-form,
.education-form,
.skills-form,
.project-form-super-container,
.experience-form-super-container {
  overflow: hidden;
  margin-bottom: -2rem;
}

.about-input-container,
.education-input-container,
.experience-input-container,
.project-input-container,
.skills-input-container {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  align-items: start;
  justify-content: center;
}

.about-form-container {
  max-width: 19rem;
}

.about-input-container .submit-btn {
  align-self: center;
}

.about-form-input,
.project-summary-input {
  resize: none;
}

.expand-btn {
  background-color: transparent;
  padding: 0;
  max-height: min-content;
  border: none;
  cursor: pointer;
  line-height: 0;
}

.edit-btn {
  background-color: transparent;
  border: none;
  padding: 0;
  cursor: pointer;
}

.edit-icon {
  width: 1.2rem;
  height: auto;
}

.skills-input-super-container {
  display: flex;
  gap: 2rem;
  flex-wrap: wrap;
}

.education-input-sub-container,
.project-input-sub-container,
.skills-input-sub-container,
.experience-input-sub-container {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.experience-input-sub-container-column {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.end-date-input-container {
  display: flex;
  gap: 1rem;
  align-items: center;
  flex-wrap: wrap;
}

.present-checkbox-container {
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.present-checkbox {
  appearance: none;
  width: 1.2rem;
  height: 1.2rem;
  background-color: #f4f4f9;
  border-radius: 50%;
  transition: background-color 0.2s ease;
}

.present-checkbox:hover {
  background-color: var(--secondary-color);
}

.present-checkbox:checked {
  background-color: var(--secondary-color);
}

.present-checkbox:checked::before {
  content: "";
  background-image: url("../assets/check-icon.svg");
  color: var(--black);
  position: absolute;
  background-repeat: no-repeat;
  background-size: cover;
  height: 1.1rem;
  width: 1.1rem;
}

.project-form,
.experience-form {
  margin-bottom: 2rem;
}

.experience-overview-container,
.project-overview-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  padding: 1rem 4rem;
}

.experience-overview-container:nth-child(1n),
.project-overview-container:nth-child(1n) {
  border-bottom: 0.1rem solid var(--black);
}

.experience-overview-container:last-child,
.project-overview-container:last-child {
  border-bottom: none;
}

.experience-individual-btns-container,
.project-individual-btns-container,
.skills-overview-btns-container {
  display: flex;
  gap: 1rem;
}

.skills-form {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.form-hide {
  margin-top: -200%;
  visibility: hidden;
  margin-bottom: 2rem;
  transition: margin-top 0.5s ease-in, visibility 0.5s ease-in;
}

.form-show {
  margin-top: 0;
  visibility: visible;
  transition: margin-top 0.5s ease-out, visibility 0.5s ease-out;
}

.no-display {
  display: none;
}

.show-display {
  display: block;
}

.show-flex-display {
  display: flex;
}

.cv-section {
  display: flex;
  align-items: start;
}

.cv-sheet {
  background-color: white;
  width: 793.7px;
  height: 1122px;
  transform-origin: 0% 0%;
}

.general-info-cv {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
  padding: 2rem 0 2rem 0;
  background-color: #586994;
  color: #fffbfc;
  font-family: Calibri, sans-serif;
}

.full-name-cv {
  font-size: 2rem;
}

.general-sub {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  min-width: 100%;
}

.general-sub-1,
.general-sub-2 {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.email-cv-container,
.phone-cv-container,
.linkedin-cv-container,
.github-cv-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  width: 18rem;
  word-break: break-all;
}

.general-cv-icon {
  width: 1.2rem;
  height: auto;
}

.main-info-cv {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.main-info-cv h1 {
  font-family: Helvetica, sans-serif;
  font-size: 1.3rem;
}

.about-cv,
.education-cv,
.experience-cv,
.project-cv,
.skills-cv {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.about-cv > :not(h1),
.education-cv > :not(h1),
.experience-cv > :not(h1),
.project-cv > :not(h1),
.skills-cv > :not(h1) {
  font-family: Calibri, sans-serif;
  font-size: 0.9rem;
}

.about-info-cv,
.responsibilities-container,
.project-summary-cv,
.education-main-info-cv,
.experience-company-details-column,
.skills-container-cv {
  word-wrap: break-word;
}

.education-info-cv {
  display: flex;
  gap: 2rem;
}

.education-main-info-cv,
.experience-company-details-column {
  width: 18rem;
}

.education-main-info-cv {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.school-name-cv,
.company-position-cv,
.project-name-cv {
  font-weight: bold;
}

.experience-main-info-cv {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.experience-company-details-column {
  display: flex;
  flex-direction: column;
}

.experience-timeline-info-container-cv {
  padding-left: 2rem;
  border-left: 0.1rem solid black;
  display: flex;
  flex-direction: column;
}

.experience-timeline-info-cv {
  display: flex;
  gap: 0.3rem;
  height: max-content;
}

.education-timeline-info-cv {
  display: flex;
  gap: 0.3rem;
  border-left: 0.1rem solid black;
  height: max-content;
  padding-left: 2rem;
}

.experience-info-cv {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.responsibilities-container {
  display: flex;
  flex-direction: column;
  padding-top: 0.5rem;
}

.experience-main-info-cv-row {
  display: flex;
  gap: 2rem;
}

.bullet-point {
  color: #586994;
  display: inline-block;
  min-height: 100%;
}

.project-info-cv {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.project-main-info-cv {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.skills-info-cv {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  column-gap: 0.5rem;
  row-gap: 0.5rem;
}

.skills-container-cv {
  width: 20rem;
  display: flex;
  gap: 0.5rem;
}

@media (max-width: 1550px) {
  #content {
    flex-wrap: wrap;
  }
}

@media (max-width: 860px) {
  .form-section {
    max-width: 25rem;
  }

  .cv-sheet {
    transform: scale(0.5);
  }

  .form-about-education-row {
    flex-wrap: wrap;
  }
}

@media (max-width: 400px) {
  .cv-sheet {
    transform: scale(0.4);
  }
}

.no-transform {
  transform: none;
}

